# sl-data

./: .gitignore  README.md  SessionData.md  SessionData.py  behavior_utils.py  classification_demo.py  cuda_test.py  kilosort4_batch.ipynb  kilosort4_utils.py  lstm_demo.py  process_events.ipynb  pyproject.toml  sessiondata_explorer.ipynb  test_session_data.py
.claude/: settings.local.json
docs/: SessionData.md  neural_classifiers_guide.md
examples/: classification_demo.py  cuda_test.py  kalman_demo.py  lstm_demo.py  lstm_demo_cross_val.py  mlp_demo.py  neural_classifier.py  place_demo.py  rate_maps_by_state.py  svm_demo.py  umap_demo.ipynb
notebooks/: behavior_explorer.ipynb  sessiondata_explorer.ipynb  sleap_explorer.ipynb  theta_viewer.ipynb  theta_viewer_old.ipynb
src/sldata/: SessionData.py  __init__.py  behavior_utils.py  place_utils.py
tests/: __init__.py  test_session_data.py
