[build-system]
requires = ["setuptools>=45", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sldata"
version = "0.1.0"
description = "A Python library for preprocessed neural spike data analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nate Gonzales-Hess", email = "nate.gonzales.hess@gmail.com"}
]
keywords = ["neuroscience", "neural-data", "spike-analysis", "behavioral-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
examples = [
    "torch>=1.9.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/sl-data"
"Bug Reports" = "https://github.com/your-username/sl-data/issues"
"Source" = "https://github.com/your-username/sl-data"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true